Add utils for services, replace mocked service operations with REST backend calls.